@@ -59,9 +59,23 @@ class TestTransform(unittest.TestCase):
         self.failIf(mail == obfuscatedMail)
         self.assertTrue(re.match(obfuscated_re, obfuscatedMail))
 
+        # Simple mail address with text in content
+        obfuscated_re = r'<html><body>My address is <span class="geomailaddress">(.)*</span></body></html>'
+        mail = """<html><body>My address is me@me.com</body></html>"""
+        obfuscatedMail = transformer.transformBytes(mail, 'utf-8')
+        self.failIf(mail == obfuscatedMail)
+        self.assertTrue(re.match(obfuscated_re, obfuscatedMail))
+
         # Multiple mail addresses in content
         obfuscated_re = r'<html><body><h2><span class="geomailaddress">(.)*</span></h2><span class="geomailaddress">(.)*</span></body></html>'
         mail = """<html><body><h2>me@me.com</h2>you@you.com</body></html>"""
+        obfuscatedMail = transformer.transformBytes(mail, 'utf-8')
+        self.failIf(mail == obfuscatedMail)
+        self.assertTrue(re.match(obfuscated_re, obfuscatedMail))
+
+        # Multiple mail addresses with texts in content
+        obfuscated_re = r'<html><body><h2>1 : <span class="geomailaddress">(.)*</span></h2>2 : <span class="geomailaddress">(.)*</span></body></html>'
+        mail = """<html><body><h2>1 : me@me.com</h2>2 : you@you.com</body></html>"""
         obfuscatedMail = transformer.transformBytes(mail, 'utf-8')
         self.failIf(mail == obfuscatedMail)
         self.assertTrue(re.match(obfuscated_re, obfuscatedMail))
@@ -94,6 +108,10 @@ class TestTransform(unittest.TestCase):
         self.failUnless(mail == obfuscatedMail)
 
         mail = """<html><body><textarea>me@me.com</textarea></body></html>"""
+        obfuscatedMail = transformer.transformBytes(mail, 'utf-8')
+        self.failUnless(mail == obfuscatedMail)
+
+        mail = """<html><body><textarea>My email is me@me.com</textarea></body></html>"""
         obfuscatedMail = transformer.transformBytes(mail, 'utf-8')
         self.failUnless(mail == obfuscatedMail)
 
